# spt-modpack-updater

./: .gitignore  .modpackignore  AGENTS.md  Cargo.toml  README.md  app.manifest  build.rs  updater-config-example.json  version.rc
.cargo/: config.toml
.github/workflows/: release.yml
src/: git.rs  main.rs  manifest.rs  progress.rs  spt.rs  tui.rs  types.rs  ui.rs  updater.rs
