[package]
name = "spt-modpack-updater"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enable-ansi-support = "0.2"
ureq = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase"] }

[build-dependencies]
serde_json = "1.0"
winres = "0.1"
